Fixed media quary on larger screen & rain warning icons not showing up

--- a/src/css/base/_mixin.module.scss
+++ b/src/css/base/_mixin.module.scss
@@ -1,27 +1,32 @@
 @mixin atHandHeld {
-    @media (min-width: 375px) {
-        @content;
-    }
+  @media (min-width: 375px) {
+    @content;
+  }
 }
 
 @mixin atSmall {
-    @media (min-width: 530px) {
-        @content;
-    }
+  @media (min-width: 530px) {
+    @content;
+  }
 }
 
 @mixin atMedium {
-    @media (min-width: 800px) {
-        @content;
-    }
+  @media (min-width: 800px) {
+    @content;
+  }
 }
 
 @mixin atLarge {
-    @media (min-width: 1010px) {
-        @content;
-    }
+  @media (min-width: 1010px) {
+    @content;
+  }
 }
 
+@mixin atFullScreen {
+  @media (min-width: 1900px) {
+    @content;
+  }
+}
 // $value: can be a number, 'landscape', or a breakpoint letter
 // $feature: default is min-width,
 // can be overwritten with 'max-width', or 'orientation' etc.
