--- a/src/css/module/_weatherHourly.module.scss
+++ b/src/css/module/_weatherHourly.module.scss
@@ -1,37 +1,41 @@
 .WeatherHourly {
-    padding: 10px;
-    overflow: auto;
-    white-space: nowrap;
+  padding: 10px;
+  overflow: auto;
+  white-space: nowrap;
 
-    &__list-item {
-        display: inline-block;
-        padding: 0.2rem;
-        margin: 0.3rem 0.2rem;
+  &__list-item {
+    display: inline-block;
+    padding: 0.2rem;
+    margin: 0.3rem 0.2rem;
 
-        @include atSmall {
-            padding: 0.5rem;
-            margin: 0.4rem 0.3rem;
-        }
+    @include atSmall {
+      padding: 0.5rem;
+      margin: 0.4rem 0.3rem;
     }
 
-    &__list-time {
-        font-size: 0.9rem;
-        font-weight: 300;
-        padding: 0.4rem;
+    @include atLarge {
+      margin: 0.4rem 1.3rem;
     }
+  }
 
-    &__list-temp {
-        font-size: 1.2rem;
-        font-weight: 300;
-        padding: 0.4rem;
+  &__list-time {
+    font-size: 0.9rem;
+    font-weight: 300;
+    padding: 0.4rem;
+  }
+
+  &__list-temp {
+    font-size: 1.2rem;
+    font-weight: 300;
+    padding: 0.4rem;
+  }
+
+  &__list-icon {
+    width: 30px;
+    height: auto;
+
+    @include atSmall {
+      width: 40px;
     }
-
-    &__list-icon {
-        width: 30px;
-        height: auto;
-
-        @include atSmall {
-            width: 40px;
-        }
-    }
+  }
 }
