--- a/src/css/module/_weatherToday.module.scss
+++ b/src/css/module/_weatherToday.module.scss
@@ -1,56 +1,57 @@
 .WeatherToday {
-    &__header__hourly {
-        display: grid;
-        grid-template-columns: 1fr auto 30px 30px;
-        grid-template-rows: 20px;
-        grid-column-gap: 5px;
-        @include atSmall {
-            grid-template-columns: 1fr 30px 30px auto;
-        }
-        &__day {
-            grid-row: 2;
-            @include atSmall {
-                grid-column: 1;
-            }
-        }
-
-        &__max {
-            justify-self: end;
-            grid-row: 2;
-            grid-column: 3;
-
-            @include atSmall {
-                grid-column: 2;
-                grid-row: 2;
-            }
-        }
-
-        &__min {
-            justify-self: end;
-            grid-row: 2;
-            grid-column: 4;
-            color: $muted-color;
-
-            @include atSmall {
-                grid-column: 3;
-                grid-row: 2;
-            }
-        }
-
-        &__summary {
-            margin-top: 1rem;
-            font-weight: 200;
-            font-size: 0.9rem;
-
-            @include atSmall {
-                grid-row: 2;
-                grid-column: 5;
-                margin-right: 1rem;
-            }
-        }
+  &__header__hourly {
+    display: grid;
+    grid-template-columns: 1fr auto 30px 30px;
+    grid-template-rows: 20px;
+    grid-column-gap: 5px;
+    @include atSmall {
+      grid-template-columns: 1fr 30px 30px auto;
+    }
+    &__day {
+      grid-row: 2;
+      @include atSmall {
+        grid-column: 1;
+      }
     }
 
-    &--closer-to-hr {
-        margin-bottom: 1px;
+    &__max {
+      justify-self: end;
+      grid-row: 2;
+      grid-column: 3;
+
+      @include atSmall {
+        grid-column: 2;
+        grid-row: 2;
+      }
     }
+
+    &__min {
+      justify-self: end;
+      grid-row: 2;
+      grid-column: 4;
+      color: $muted-color;
+
+      @include atSmall {
+        grid-column: 3;
+        grid-row: 2;
+      }
+    }
+
+    &__summary {
+      margin-top: 1rem;
+      font-weight: 200;
+      font-size: 0.9rem;
+
+      @include atSmall {
+        grid-row: 2;
+        grid-column: 5;
+        margin-right: 1rem;
+        font-size: 1.1rem;
+      }
+    }
+  }
+
+  &--closer-to-hr {
+    margin-bottom: 1px;
+  }
 }
